tests/ui/borrowck/issue-103250.stderr
error[E0381]: used binding `last_error` isn't initialized
  --> $DIR/issue-103250.rs:22:13
   |
LL |         let mut last_error: Box<dyn std::error::Error>;
   |             -------------- binding declared here but left uninitialized
...
LL |         Err(last_error)
   |             ^^^^^^^^^^ `last_error` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |         let mut last_error: Box<dyn std::error::Error> = Box::new(/* value */);
   |                                                        +++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
